actually make midpoints work!

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -894,7 +894,7 @@ collectCladeExpansions <- function(orthopairs, sp1, sp2, bigChr, longShort) {
               mod_orthopair$query.dNdS_HmmCleaner <- NA # ""
               mod_orthopair$query.dNdS_PRANK      <- NA # ""
               mod_orthopair$query.orthoFlagDF <- cur_gene$orthoFlagDF
-              mod_orthopair$midpoint <- (next_orthopair$start-1-prev_orthopair$end+1)/2
+              mod_orthopair$midpoint <- (next_orthopair$start-1+prev_orthopair$end+1)/2
               rownames(mod_orthopair) <- NULL
               return(mod_orthopair)
             } else {
